# SafeDiffusion-R1

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml
assets/: CoProv2_captions.txt
assets/css/: site.css
assets/js/: site.js
config/: base.py
evaluation/: overview.md
evaluation/execs/: compute_nudity_rate.py  generate_images.py
evaluation/execs/Q16/: eval.py  requirements.txt
evaluation/utils/: img2tensor.py
evaluation/utils/metrics/nudenet/: detector.py
fastvideo/: train.py
fastvideo/models/stable_diffusion/: pipeline_with_logprob.py
rewards/: inference_reward.py  safety_classifier.py
scripts/: run_eval.sh  run_train.sh  test_release.sh
